<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:orientation="vertical"
    tools:context="fragments.FirstFragment">

    <EditText
        android:id="@+id/etFirst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter First number"
        android:gravity="center"
        android:layout_margin="10dp"
        />
    <EditText
        android:id="@+id/etSecond"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter Second number"
        android:gravity="center"
        android:layout_margin="10dp"
        />
    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Calculate"
        android:layout_margin="10dp"
        />
    <TextView
        android:id="@+id/tvOutput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter Second number"
        android:gravity="center"
        android:layout_margin="10dp"
        />
</LinearLayout>

